xls/dslx/tests/errors/import_a_parse_error_module.x
// Copyright 2024 The XLS Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This module has a type error in it. We should make sure the parse error in
// the imported module is the reported error.
import xls.dslx.tests.errors.bad_dim;

fn main() -> bits[5] {
  bad_dim::foo(u32:42)
}
